--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -104,7 +104,7 @@
                 <p><strong>Storage Specifications:</strong></p>
                 <ul>
                     {% for spec in item['storage_computers'] %}
-                        <li>Type: {{ spec['Type'] }}, MP: {{ spec['Size'] }}</li>
+                        <li>Type: {{ spec['Type'] }}, Storage: {{ spec['Size'] }}</li>
                     {% endfor %}
                 </ul>
                 {% endif %}               
