--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,17 @@
         </div>
         {% endfor %}
         <div class="pagination">
-            <a href="#">Previous</a> <a href="#">1</a> <a href="#">2</a> <a href="#">Next</a>
+            {% if page > 1 %}
+            <a href="{{ url_for('index', page=page-1) }}">Previous</a>
+            {% endif %}
+            {% for p in range(1, total_pages+1) %}
+            <a href="{{ url_for('index', page=p) }}" class="{{ 'active' if p == page else '' }}">{{ p }}</a>
+            {% endfor %}
+            {% if page < total_pages %}
+            <a href="{{ url_for('index', page=page+1) }}">Next</a>
+            {% endif %}
         </div>
+        
         <div class="back-to-home">
             <a href="/">Back to Home</a>
         </div>
