bugfix: fix category page

--- a/templates/category.html
+++ b/templates/category.html
@@ -97,7 +97,7 @@
         <a href="/category/vehicles">Vehicles</a>
         <a href="/category/computers">Computers</a>
         <a href="/category/phones">Phones</a>
-        <a href="/category/private_lessons">Private Lessons</a>
+        <a href="/category/lessons">Private Lessons</a>
     </div>
     <div class="header">
         <div class="header-content">
