--- a/templates/category.html
+++ b/templates/category.html
@@ -131,7 +131,21 @@
             {% endfor %}
         </div>
         <div class="pagination">
-            <a href="#">Previous</a> <a href="#">1</a> <a href="#">2</a> <a href="#">Next</a>
+            {% if current_page > 1 %}
+                <a href="{{ url_for('category', category_name=category, page=current_page - 1) }}">Previous</a>
+            {% endif %}
+            
+            {% for num in range(1, total_pages + 1) %}
+                {% if num == current_page %}
+                    <span>{{ num }}</span>
+                {% else %}
+                    <a href="{{ url_for('category', category_name=category, page=num) }}">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+            
+            {% if current_page < total_pages %}
+                <a href="{{ url_for('category', category_name=category, page=current_page + 1) }}">Next</a>
+            {% endif %}
         </div>
     </div>
     <div class="footer">
