--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
         <a href="/category/vehicles">Vehicles</a>
         <a href="/category/computers">Computers</a>
         <a href="/category/phones">Phones</a>
-        <a href="/category/private_lessons">Private Lessons</a>
+        <a href="/category/lessons">Private Lessons</a>
     </div>
     <div class="header">
         <div class="header-content">
@@ -166,7 +166,7 @@
             <a href="{{ url_for('index', page=page+1) }}">Next</a>
             {% endif %}
         </div>
-        
+
         <div class="back-to-home">
             <a href="/">Back to Home</a>
         </div>
