--- a/templates/category.html
+++ b/templates/category.html
@@ -148,6 +148,7 @@
             {% endif %}
         </div>
     </div>
+    <a href="/">Back to Home</a>
     <div class="footer">
         <p>© 2024 CENGden. All rights reserved.</p>
     </div>
